--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-numpy==1.24.1
+numpy
 pandas==1.5.2
 plotly==5.12.0
 python-dateutil==2.8.2
