--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 numpy
-pandas==1.5.2
+pandas
 plotly==5.12.0
 python-dateutil==2.8.2
 pytz==2022.7.1
