--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--upgrade pip
 click==8.1.3
 dash==2.7.1
 dash-core-components==2.0.0
@@ -9,7 +10,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 numpy
-pandas
+pandas==1.5.2
 plotly==5.12.0
 python-dateutil==2.8.2
 pytz==2022.7.1
