--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,11 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 numpy
-pandas==1.3.5
 plotly==5.12.0
 python-dateutil==2.8.2
 pytz==2022.7.1
+fsspec
+pandas==1.3.5
 six==1.16.0
 tenacity==8.1.0
 Werkzeug==2.2.2
